// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput is a textarea 1`] = `
<textarea
  className="ds-c-field"
  id="1"
  name="spec-field"
/>
`;

exports[`TextInput is an input field 1`] = `
<input
  className="ds-c-field"
  id="1"
  name="spec-field"
  type="text"
/>
`;

exports[`TextInput masks renders TextInput 1`] = `
<input
  className="ds-c-field"
  id="1"
  name="spec-field"
  type="text"
/>
`;

exports[`TextInput masks renders currency mask 1`] = `
<Mask
  mask="currency"
>
  <input
    className="ds-c-field ds-c-field--currency"
    id="1"
    name="spec-field"
    type="text"
  />
</Mask>
`;
